<resources>
    <string name="app_name">NutriSeeApp</string>
    <string name="welcome">Welcome!</string>
    <string name="onboard1"> NutriSee provides tailored dietary advice based on your individual needs and goals, helping you make informed nutrition choices for a healthier lifestyle.!</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome2">Open Sesame!!</string>
    <string name="onboard2">You can use your own camera to scan the product and get the nutrition fact, help you to be healthy by concern to your nutrition intake</string>
    <string name="welcome3">Personalize!</string>
    <string name="onboard3">NutriSee offers personalized dietary guidance tailored to your specific requirements and objectives, empowering you to make well-informed nutritional decisions for a healthier way of life.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password_error">Password should have at least 8 characters</string>
    <string name="password_blank">Password Invalid</string>
    <string name="email_blank">Email Invalid</string>
    <string name="name_blank">Name Must Fill</string>
    <string name="email_error">Format Email</string>
    <string name="string_in_login">Sign in to access Nutrisee App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="noaccount">Don\'t have an Account?</string>
    <string name="hvaccount">Have an Account?</string>
    <string name="string_in_register">Sign Up &amp; Explore</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="freeacc">Your account status :</string>
    <string name="text_premium">Unlock NutriSee Premium</string>
    <string name="sign_out">Sign Out</string>
    <string name="app_version">App Version \t\t\t\t\t\t\t\t\t\t\t\t 1.0.0</string>
    <string name="free_tier">Free Tier</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>