<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboard1"
    android:background="@color/broken_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.OnBoard1Activity">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/snacks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="@font/abeezee_regular"
            android:textColor="@color/black"
            android:text="@string/welcome" />

        <TextView
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/abeezee_regular"
            android:text="@string/onboard1"
            android:textAlignment="center"
            android:textColor="@color/soft_gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_marginTop="26dp"
            android:text="@string/next"
            android:textSize="16sp"
            style="@style/ButtonSoftBlue"
            android:fontFamily="@font/abeezee_regular"/>

    </LinearLayout>

</RelativeLayout>
