<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/broken_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">>

        <ImageView
            android:layout_width="352dp"
            android:layout_height="356dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/snacks3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="@font/abeezee_reguler"
            android:text="@string/welcome3" />

        <TextView
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/abeezee_reguler"
            android:text="@string/onboard3"
            android:textAlignment="center"
            android:textColor="@color/soft_gray"
            android:textSize="14sp" />
        <Button
            android:id="@+id/next_login_button"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_marginTop="26dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/abeezee_reguler"/>
        <Button
            android:id="@+id/next_regis_button"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/soft_blue"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/abeezee_reguler"/>

    </LinearLayout>

</RelativeLayout>
