<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/broken_white"
    tools:context=".fragment.CameraFragment">
    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp">
        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="367dp"
            android:layout_marginTop="42dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/baseline_insert_photo_24" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                style="@style/ButtonDarkBlue"
                android:textColor="@color/white"
                android:text="@string/camera" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                style="@style/ButtonDarkBlue"
                android:textColor="@color/white"
                android:text="@string/gallery" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieloading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loadinganimation" />

        <Button
            android:id="@+id/uploadButton"
            style="@style/ButtonLightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:padding="16dp"
            android:text="@string/analyze"
            android:textColor="@color/dark_blue"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>