<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/broken_white"
    tools:context=".fragment.UserFragment">

    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp">
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/userProfileImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_account"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="Nama Pengguna"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/abeezee_regular"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/userEmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="email@example.com"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/abeezee_regular"
                    android:gravity="center" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:backgroundTint="@color/soft_blue"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textSize="25sp"
                android:text="@string/freeacc"
                android:textColor="@color/broken_white"
                android:textAlignment="center"
                android:fontFamily="@font/abeezee_regular"
                android:gravity="center" />
            <Button
                android:layout_width="280dp"
                android:layout_height="65dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="10dp"
                android:text="@string/text_premium"
                android:textColor="@color/dark_blue"
                android:textSize="15sp"
                style="@style/ButtonWhite"/>

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/sign_out"
            android:textColor="@color/dark_blue"
            android:drawableLeft="@drawable/ic_logout"
            android:gravity="left|center"
            android:drawablePadding="8dp"
            style="@style/ButtonWhite"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:text="@string/app_version"
            android:textColor="@color/dark_blue"
            android:drawableLeft="@drawable/ic_phone"
            android:gravity="left|center"
            android:drawablePadding="8dp"
            style="@style/ButtonWhite"/><Button
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/app_version"
        android:textColor="@color/dark_blue"
        android:drawableLeft="@drawable/ic_phone"
        android:gravity="left|center"
        android:drawablePadding="8dp"
        style="@style/ButtonWhite"/>
    </LinearLayout>

</RelativeLayout>
